--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <ng-container *transloco="let t">
   <p>{{ t("title") }}</p>
 </ng-container>
+<select [(ngModel)]="selectedLang" (ngModelChange)="changeLang($event)">
+  <option *ngFor="let lang of availableLangs">
+    {{ lang }}
+  </option>
+</select>
