change drawer padding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       </mat-nav-list>
       
     </mat-drawer>
-    <mat-drawer-content>
+    <mat-drawer-content class="drawer-content">
       <mat-form-field appearance="fill">
         <mat-label>{{ t("choose-lang") }}</mat-label>
         <mat-select
