--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 .drawer-container {
     width: 100%;
     height: 100%;
-    padding: 1rem;
   }
   
+  .drawer-content {
+      padding: 1rem;
+  }
